intro section fixes on mobile devices

--- a/src/blocks/introWithVideo/index.scss
+++ b/src/blocks/introWithVideo/index.scss
@@ -240,6 +240,9 @@
       padding: 16px 24px;
     }
   }
+  .intro__integrations {
+    margin-top: 0px;
+  }
   .intro__grid {
     margin-top: 20px;
   }
@@ -255,6 +258,9 @@
 }
 
 @media (max-width: 320px) {
+  .intro {
+    padding-bottom: 140px;
+  }
   .intro__video{
     max-width: 270px;
     min-height: unset;
@@ -265,5 +271,11 @@
       top: calc(50% - (var(--height) / 2) + 10px);
       left: calc(50% - 70px)
     }
+  }
+  .intro__grid {
+    margin-top: 0;
+  }
+  .intro__text {
+    font-size: 22px;
   }
 }
